--- a/leanpkg.toml
+++ b/leanpkg.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lean-example"
+name = "lean3-example"
 version = "0.1"
 lean_version = "leanprover-community/lean:3.50.3"
 path = "src"
